tests/ui/expressions/struct-expressions/struct-expression-union-named-initializer-2.stderr
error[E0784]: union expressions should have exactly one field
  --> $DIR/struct-expression-union-named-initializer-2.rs:9:34
   |
LL |     let named_union_two_fields = MyUnion { x: 5, y: 1.2 };
   |                                  ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0784`.
